# DeploymentSystem

./: .gitignore  CMakeLists.txt  Config.md  Main.qml  conanfile.txt  main.cpp  resources.qrc  utils.js
include/: config.h  config_writer.h  const.h  domain_configurator.h  language_controller.h  libssh2_manager.h  roles.h  ssh_connection.h  station.h  station_builder.h  station_model.h  systems.h  user_settings.h  user_settings_wrapper.h  utils.h  xml_config_writer.h
ldap_setup/: CMakeLists.txt  build.bash
ldap_setup/include/: ldap_setup.h
ldap_setup/src/: ldap_setup.cpp  main.cpp
qml/: ConnectionSettingsUI.qml  CustomToolBarButton.qml  FileSelection.qml  InstallationSettingsUI.qml  Main.qml  SettingsDialog.qml  StationItem.qml  StationSettingsUI.qml
src/: config.cpp  language_controller.cpp  main.cpp  roles.cpp  ssh_connection.cpp  station.cpp  station_model.cpp  systems.cpp  user_settings.cpp  xml_config_writer.cpp
translations/: translations_en.ts  translations_ru.ts
